# Dhakira

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  config.py  dataset.py  metrics.py  report.py  run_benchmark.py  token_counter.py
benchmarks/runners/: __init__.py  base.py  dhakira_runner.py  mem0_runner.py
dhakira/: __init__.py  async_memory.py  config.py  memory.py  models.py
dhakira/arabic/: __init__.py  chunker.py  dialect.py  normalizer.py  utils.py
dhakira/cache/: __init__.py  semantic.py
dhakira/consolidation/: __init__.py  audn.py  dedup.py  prompts.py
dhakira/embeddings/: __init__.py  base.py  factory.py  huggingface_.py
dhakira/extraction/: __init__.py  entity.py  extractor.py  prompts.py
dhakira/llm/: __init__.py  anthropic_.py  base.py  bedrock_.py  factory.py  ollama_.py  openai_.py
dhakira/retrieval/: __init__.py  bm25.py  reranker.py  searcher.py
dhakira/storage/: __init__.py  base.py
dhakira/storage/graph/: __init__.py  factory.py  networkx_.py
dhakira/storage/vector/: __init__.py  factory.py  qdrant.py
examples/: agent_memory.py  dialectal.py  quickstart.py  with_langchain.py
tests/: test_audn.py  test_chunker.py  test_dialect.py  test_entity.py  test_extraction.py  test_graph.py  test_memory.py  test_normalizer.py  test_retrieval.py
